code/tui/src/app/snapshots/app__usage_tests__usage_account_changed.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                            [— / —] [Dashboard]

            ┌── Usage ────────────────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │> Status  ·  Account changed. Run /usage again.                          │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────│                                                                         │───────────
  > Build an│  Esc to close  ·  Run /usage to refresh                                 │
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model
