code/tui/src/app/snapshots/app__usage_tests__usage_bigmodel.snap
---
source: code/tui/src/app/usage_tests.rs
expression: bigmodel_screen
---
  .                                                        [— / —] [Dashboard]


        ┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │   BigModel    Z.AI                                           │
        │                                                              │
        │> BigModel plan  ·  Not reported                              │
        │  5-hour limit                                                │
        │  5h window  ·  87% left (13% used)                           │
        │  Resets  ·  2026-09-28 00:00 UTC                             │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│  Tab/Shift+Tab to switch · Esc to close                      │──────
  > Buil└──────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────── Automatic model
