code/tui/src/app/snapshots/app__usage_tests__usage_dismissed.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 16)"
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘

> /usage




────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────

  ⏸ ask permissions on
