code/tui/src/app/snapshots/app__usage_tests__usage_loading.snap
---
source: code/tui/src/app/usage_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                                [Dashboard]

> /usage┌── Usage ─────────────────────────────────────────────────[✗]─┐
        │                                                              │
        │  Loading…                                                    │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
  ──────│                                                              │──────
  > Buil│  Esc to close                                                │
  ──────└──────────────────────────────────────────────────────────────┘model
